# random-stuff-2

./: .gitignore  README.md  Untitled.ipynb  Untitled.ipynb.py  Untitled1.ipynb  balanced_list.py  balanced_list_viz.py  breathe.py  carmax.py  chunk_uuid.py  custom_probability.py  dask_walkthrough.ipynb  differential_privacy.py  download_files.py  expected_value.py  generate_password.py  github_user_languages.py  manual_correlation.py  mean_median_speeds.py  memcompress_comparison.r  memory_monitor.bash  monty_hall.py  multithreaded_api_calls.py  nbody_matplotlib.py  paran_check.py  pixel_prob_dist.py  py2048.py  python_starred_expressions.ipynb  random_choice.py  random_matrix.py  reg_plot_facet.py  reinforcement_learning.py  send_gmail.py  send_mail.py  simple_soap.py  slot_machine.py  smote.R  time.R  vocab_scraper.py  weird_progress_bar.py  (+1 more)
cron_tests/: example.cron  two_minute_job.py
croncheck/: README.md  checks.yaml
data/: bad_bags.csv  charges.csv  charges_missing.csv  diabetes.csv  diabetes.csv.info  diabetes2.csv  diabetes_X.csv  diabetes_mock.csv  diabetes_y.csv  insurance.csv  insurance_dummies_with_id.csv  insurance_reg.csv  insurance_test.csv  insurance_test_ACTUAL.csv  insurance_train.csv  (+5 more)
misc_game_dev/bevy_minigolf/: Cargo.toml  README.md  index.html
misc_game_dev/bevy_minigolf/assets/: levels.json
misc_game_dev/bevy_minigolf/dev/: mini_golf.drawio  mini_golf.drawio.xml  parse_xml.py
misc_game_dev/bevy_minigolf/src/: level_data.rs  main.rs
misc_game_dev/bevy_networking_poc/: Cargo.toml  outline
misc_game_dev/bevy_networking_poc/src/: lib.rs
(+217 files in other folders)
