[package]
name = "mini-golf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
bevy_prototype_lyon = "0.7.2"
bevy_rapier2d = "0.19.0"
serde = "1.0.152"
serde_json = "1.0.91"
