[package]
name = "mini_golf"
version = "0.1.0"
edition = "2021"

default-run = "client"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bevy_egui = "0.17.1"
bevy_prototype_lyon = "0.7.2"
bevy_rapier2d = "0.19.0"
bevy_renet = "0.0.6"
bincode = "1.3.3"
renet_visualizer = { version = "0.0.3", features = ["bevy"] }
serde = "1.0.152"
